src/main/objects/WorkOrderValue__c.object
<CustomObject>
    <fields>
        <fullName>Other_Parts__c</fullName>
        <label>Other Parts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Schedule__c</fullName>
        <label>Payment Schedule</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Appointment__c</fullName>
        <label>Service Appointment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Work Order Value Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>WorkOrder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Order Value Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>